# aetherink

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md
src/: app.rs  canvas.rs  main.rs  stroke.rs
src/app/: settings.rs  settings_window.rs  ui.rs
src/platform/: macos.rs  mod.rs  windows.rs
